--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start":"node server/server.js",
-    "herok-postbuild":"yarn run build:prod",
+    "heroku-postbuild":"yarn run build:prod",
     "serve": "live-server public/",
     "build:dev": "webpack --env development",
     "build:prod": "webpack -p --env production",
